# scafell

./: .gitignore  CMakeLists.txt  datum.c  datum.h  err_handling.c  err_handling.h  hash.c  hash.h  list.c  list.h  make_vs_proj.bat  mmgt.c  mmgt.h  str.c  str.h  ucbuilder.awk  ucdb.c  ucdb.h  unicode_data.h  xxx.h
ScafellTest/: list_tests.c  scuts.c  scuts.h
ScafellTest/ScafellTest/: buffer_tests.c  hash_tests.c  list_tests.c  main.c  mmgt_tests.c  scuts.c  scuts.h  string_tests.c
ScafellTest/ScafellTest.xcodeproj/: project.pbxproj
ScafellTest/ScafellTest.xcodeproj/xcshareddata/xcschemes/: ScafellTest.xcscheme
ScafellTest/ScafellTest.xcodeproj/xcuserdata/tony.xcuserdatad/xcschemes/: xcschememanagement.plist
ScafellTest2/ScafellTest.xcodeproj/: project.pbxproj
ScafellTest2/ScafellTest.xcodeproj/xcuserdata/tony.xcuserdatad/xcschemes/: xcschememanagement.plist
ScafellTest2/ScafellTest2/: main.c
os/: osdefs.h  osunix.h
scafell/: CMakeLists.txt  datum.h  err_handling.h  fs.h  hash.c  hash.h  mmgt.h  osdefs.h  str.c  str.h  ucdb.h  unicode_data.h
scafell-tests/: .CMakeLists.txt.swp  CMakeLists.txt  buffer_tests.c  hash_tests.c  string_tests.c
scafell.xcodeproj/: project.pbxproj
scafell.xcodeproj/xcuserdata/tony.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
scafell.xcodeproj/xcuserdata/tony.xcuserdatad/xcschemes/: xcschememanagement.plist
scafell/os/: osunix.h  oswin.h
scf/: CMakeLists.txt  scf.c  scf.h
scf-core/: CMakeLists.txt  datum.c  err_handling.c  err_handling.h  list.c  machine_info.c  machine_info.h  mmgt.c  mmgt.h  osdefs.h  str.c
scf-core-tests/: CMakeLists.txt  list_tests.c
scf-core/scf-core-tests/: CMakeLists.txt
scf-ucs/: CMakeLists.txt  codecs.c  codecs.h  ucbuilder.awk  ucs_db.c  ucs_db.h  ucs_string.c  ucs_string.h  ucsdb.c  ucsdb.h  unicode_data.h
scf-ucs/scf-ucs-tests/: CMakeLists.txt  codec_tests.c  main.c  ucs_string_tests.c  ucsdb_tests.c
scuts/: CMakeLists.txt  scuts.h
